<resources>
    <string name="app_name">기억의궁전</string>
    <string name="intro">머리말</string>
    <string name="day1">day1- 몸</string>
    <string name="day2">day2- 상상하기</string>
    <string name="day3">day3-장소</string>
    <string name="day3_2">궁전만들기Tip</string>
    <string name="day4">day4- 숫자</string>
    <string name="day_fc">day5- 질문</string>
    <string name="day_fc_sample">인물-숫자 샘플</string>
    <string name="day_pao">day6-숫자2</string>
    <string name="numPrac">pao연습</string>
    <string name="numPrac_mem">기록보기</string>
    <string name="numPrac_mem_date">날짜별 기록보기</string>
    <string name="numPrac_mem_score">지금까지 맞춘 숫자보기</string>

    <!-- 테스트 시에는 아래 구글 공식 테스트 ID를 사용하세요 (배포 시 원래대로 복구 필수) -->
    <string name="addmop_code">ca-app-pub-3940256099942544/6300978111</string>
    <!-- <string name="addmop_code">ca-app-pub-9335622001765471/4524660727</string> -->


    <!--notice-->
    <string name="help">기억의 궁전으로 00~99 인물-숫자 변환을 외운 후에 연습하세요.\n
        4자리 숫자를 인물 행동으로 변환하는 연습입니다.\n\n
    0000~9999 사이의 무작위 숫자 30개가 한 세트가 됩니다.\n
    틀림 버튼 - 해당 숫자는 세트의 맨 끝으로 이동합니다. 맞출 때 까지 나오게 됩니다.\n\n
    맞음 버튼 - 해당 숫자는 더 이상 세트에 나타나지 않습니다. 30개를 모두 맞추시면 해당 세트는 종료되고, 기록이 남습니다.\n\n
    만개를 채울때까지 해보자구요.(아무도 안할듯...)</string>
    <string name="help2">제가 사용하는 숫자->인물 변환입니다. 해당 번호를 터치하세요.\n
    남는 한글 모음들도 사용 할 수 있습니다. 저는 1(ㄱ,ㅋ) 3(ㄷ,ㅌ) 4(ㄹ,ㅎ) 로 사용합니다. </string>
</resources>
